Upgrade Room 109 to Yosemite.

--- a/pkgsinfo/OS/OS X 10.10.4 Yosemite-10.10.4
+++ b/pkgsinfo/OS/OS X 10.10.4 Yosemite-10.10.4
@@ -20,6 +20,7 @@
 	<key>catalogs</key>
 	<array>
 		<string>testing</string>
+		<string>production</string>
 	</array>
 	<key>category</key>
 	<string>Operating Systems</string>
@@ -56,6 +57,8 @@
 			<string>10.10.4</string>
 		</dict>
 	</array>
+	<key>unattended_install</key>
+	<false/>
 	<key>uninstall_method</key>
 	<string>removepackages</string>
 	<key>uninstallable</key>
